src/objects/CD_GMT_ProductDetails__c.object
<CustomObject>
    <fields>
        <fullName>APC_Code__c</fullName>
        <label>APC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APC_description__c</fullName>
        <label>APC description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distinct_Sales_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distinct Sales Model</label>
        <referenceTo>Distinct_CD_BOM_Structures__c</referenceTo>
        <relationshipLabel>CD GMT ProductDetails</relationshipLabel>
        <relationshipName>CD_GMT_ProductDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GTM_Assumptions__c</fullName>
        <label>GTM Assumptions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MCPU_Calulation_Based_on__c</fullName>
        <label>MCPU Calulation Based on</label>
        <picklist>
            <picklistValues>
                <fullName>BOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OVERRIDE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Code</label>
        <referenceTo>CD_Organizations__c</referenceTo>
        <relationshipLabel>CD GMT ProductDetails</relationshipLabel>
        <relationshipName>CD_GMT_ProductDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesModel_IOD_Out__c</fullName>
        <formula>Sales_Model__r.Name</formula>
        <label>SalesModel_IOD_Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Model</label>
        <referenceTo>CD_BOM_Structure__c</referenceTo>
        <relationshipLabel>CD GMT ProductDetails</relationshipLabel>
        <relationshipName>CD_GMT_ProductDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Product_Name__c</fullName>
        <label>Unique Product Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XCVR__c</fullName>
        <label>XCVR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CD GMT ProductDetails</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD GMT ProductDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_Name_Field</fullName>
        <active>true</active>
        <description>To Ensure No Duplicates in Name Field</description>
        <errorConditionFormula>AND(CONTAINS(VLOOKUP( $ObjectType.CD_GMT_ProductDetails__c.Fields.Name , $ObjectType.CD_GMT_ProductDetails__c.Fields.Name, Name), Name), OR(ISNEW(), ISCHANGED(Name)) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Product already exists with the given Name.Please choose another Name.</errorMessage>
    </validationRules>
</CustomObject>